# curvanato

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  test_morph.py
.github/workflows/: python-package.yml
curvanato/: __init__.py  curvature.py
curvanato/data/template_models/: template_medial_surface_noisy_pts.csv  template_medial_surface_smooth_pts.csv
examples/: caudate_report.py  evaluate_advanced_methods.py  evaluate_regularization.py  evaluate_smooth_template.py  flat_map_population.py  population_study.py  render_surfaces.py  visualize_inset.py
tests/: example.py  example_fs.py  example_loop.py  test_auto_subdivide_left_right_anatomy.py  test_curvature.py  test_curvature_2.py  test_grad_clust.py  test_jacobian.py  test_kk.py  test_laterality_subdivide.py  test_skel.py  test_t1w_alg.py  test_template_driven.py
